RESOLVED FIXED 75198
CSSElementStyleDeclarations should never move between elements.
https://bugs.webkit.org/show_bug.cgi?id=75198
Summary CSSElementStyleDeclarations should never move between elements.
Andreas Kling
Reported 2011-12-24 13:54:22 PST
We should enforce this at compile-time.
Attachments
Patch (4.78 KB, patch)
2011-12-24 13:55 PST, Andreas Kling
andersca: review+
Andreas Kling
Comment 1 2011-12-24 13:55:53 PST
Andreas Kling
Comment 2 2011-12-24 14:08:16 PST
Note You need to log in before you can comment on or make changes to this bug.