CSSElementStyleDeclarations should never move between elements. <http://webkit.org/b/75198>

Reviewed by Anders Carlsson.

Have the CSSElementStyleDeclaration subclasses take a StyledElement* in
the constructor and replace setElement(StyledElement*) by clearElement().

No behavior change, just enforcing the current behavior at compile-time.

* css/CSSElementStyleDeclaration.h:
(WebCore::CSSElementStyleDeclaration::clearElement):
(WebCore::CSSElementStyleDeclaration::CSSElementStyleDeclaration):
* css/CSSInlineStyleDeclaration.h:
(WebCore::CSSInlineStyleDeclaration::create):
(WebCore::CSSInlineStyleDeclaration::CSSInlineStyleDeclaration):
* dom/StyledElement.cpp:
(WebCore::StyledElement::createInlineStyleDecl):
(WebCore::StyledElement::destroyInlineStyleDecl):
* svg/SVGFontFaceElement.cpp:
(WebCore::FontFaceStyleDeclaration::FontFaceStyleDeclaration):


Canonical link: https://commits.webkit.org/91969@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103664 268f45cc-cd09-0410-ab3c-d52691b4dbfc